Update with search route
